# vpaw

./: .git-blame-ignore-revs  .pre-commit-config.yaml  .ruff.toml  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: pre-commit.yml
Applications/: CMakeLists.txt
Applications/vpawApp/: CMakeLists.txt  Main.cxx  qvpawAppMainWindow.cxx  qvpawAppMainWindow.h  qvpawAppMainWindow_p.h  slicer-application-properties.cmake
Applications/vpawApp/Resources/: App.qrc
Applications/vpawApp/Resources/Models/: cylinder.ply
Applications/vpawApp/Widgets/: qAppStyle.cxx  qAppStyle.h
Modules/Scripted/Home/: CMakeLists.txt  Home.py
Modules/Scripted/Home/Resources/UI/: Home.ui
Modules/Scripted/VPAWModel/: CMakeLists.txt  VPAWModel.py
Modules/Scripted/VPAWModel/Resources/UI/: VPAWModel.ui
Modules/Scripted/VPAWModelOCT/: CMakeLists.txt  VPAWModelOCT.py
Modules/Scripted/VPAWModelOCT/Resources/UI/: VPAWModelOCT.ui
Modules/Scripted/VPAWVisualize/: CMakeLists.txt  VPAWVisualize.py
Modules/Scripted/VPAWVisualize/Resources/UI/: VPAWVisualize.ui
Modules/Scripted/VPAWVisualize/vpawvisualizelib/: isosurfaces.py
Modules/Scripted/VPAWVisualizeOCT/: CMakeLists.txt  VPAWVisualizeOCT.py
Modules/Scripted/VPAWVisualizeOCT/Resources/UI/: VPAWVisualizeOCT.ui
doc/: tour_VPAWModel_VPAWVisualize.md
